--- a/src/index.scss
+++ b/src/index.scss
@@ -49,3 +49,10 @@ button {
     background: transparent;
 
 }
+
+
+.focus {
+    border: 1px solid #0047FF !important;
+    background: #FFF !important;
+    box-shadow: 0px 0px 0px 2px rgba(0, 71, 255, 0.15) !important;
+}
