--- a/src/components/card/window/window.module.scss
+++ b/src/components/card/window/window.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 10px;
     cursor: pointer;
+    transition: all .3s ease;
 
 
     &__img {
@@ -21,4 +22,16 @@
             width: 100%;
         }
     }
+
+    &__shodow {
+        width: 50%;
+        padding: 9px;
+        border-radius: 40px;
+    }
+
+    &__back {
+        background: #F4F4F3;
+
+    }
+
 }
