--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,25 +1,54 @@
 .main {
   display: flex;
 
+  @media screen and (max-width:650px) {
+    flex-direction: column;
+  }
+
   &__Left {
     width: 100%;
     height: 100vh;
-    position: relative;
-    // background-color: #fff;
+
     display: flex;
     justify-content: space-between;
     flex-direction: column;
 
+    @media screen and (max-width:650px) {
+      display: inline-block;
+    }
+
     &__svg {
       padding: 32px;
+
+      @media screen and (max-width:650px) {
+        padding: 0;
+        padding-left: 18px;
+        padding-top: 20px;
+      }
     }
+
+    @media screen and (max-width:650px) {
+      height: auto;
+    }
+
+    @media screen and (max-width:650px) {
+      height: 50vh;
+      background-color: rgb(156, 132, 67, .1);
+    }
+
+
   }
 
   &__img {
     width: 100%;
     max-width: 430px;
     margin: auto;
-    margin-top: 140px;
+    // margin-top: 140px;
+
+    @media screen and (max-width:650px) {
+      margin-top: 0;
+      margin-bottom: 8px;
+    }
 
     img {
       width: 100%;
@@ -32,19 +61,53 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-top: 1px solid #918c88;
+    border-top: 1px solid #F1ECE9;
     padding: 15px 29px;
     padding-left: 32px;
+    gap: 10px;
+
+    @media screen and (max-width:780px) {
+      padding: 15px 5px;
+    }
+
+    @media screen and (max-width:650px) {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: #FFF;
+      z-index: 100;
+      border-radius: 14px 14px 0px 0px;
+    }
 
     &__wrap {
       display: flex;
       gap: 22px;
+
+      @media screen and (max-width:780px) {
+        gap: 14px;
+      }
+    }
+
+    &__logo {
+      p {
+        color: #484038;
+        font-family: SF Pro Display;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+
+      @media screen and (max-width:780px) {
+        display: none;
+      }
+
     }
 
     &__line {
       width: 1px;
       height: 60px;
-      background-color: rgb(72, 64, 56, 0.4);
+      background-color: #F1ECE9;
     }
 
     &__content {
@@ -67,34 +130,55 @@
       font-style: normal;
       font-weight: 400;
       line-height: 15px;
-      /* 125% */
       margin-top: 4px;
       max-width: 252px;
+
+      @media screen and (max-width:1050px) {
+        font-size: 10px;
+      }
     }
   }
 
   &__right {
     min-width: 420px;
     height: 100vh;
+    padding-bottom: 100px;
     overflow-y: scroll;
-
     position: relative;
-    border-left: 1px solid #918c88;
+    border-left: 1px solid #F1ECE9;
 
     &::-webkit-scrollbar {
-      width: 10px;
+      width: 5px;
+
     }
 
     &::-webkit-scrollbar-track {
-      background: #dadada;
+      background: #ebebeb;
+      border-radius: 50px;
+
     }
 
     &::-webkit-scrollbar-thumb {
-      background: rgb(171, 171, 171);
+      background: rgb(222, 222, 222);
+      border-radius: 50px;
     }
 
     &::-webkit-scrollbar-thumb:hover {
-      background: rgb(158, 158, 158);
+      background: rgb(205, 205, 205);
+    }
+
+    @media screen and (max-width:1050px) {
+      min-width: 375px;
+    }
+
+    @media screen and (max-width:650px) {
+      height: 50vh;
+      border-left: none;
+    }
+
+    @media screen and (max-width:375px) {
+      min-width: 100% !important;
+      width: 100%;
     }
 
     &__header {
@@ -109,6 +193,21 @@
       background-color: #fff;
       z-index: 10;
 
+      @media screen and (max-width:1050px) {
+        max-width: 364px;
+        padding: 2px;
+      }
+
+      @media screen and (max-width:650px) {
+        top: 44.5vh;
+        max-width: 100%;
+        height: auto;
+        border-top: 1px solid #e9e8e7;
+        background-color: transparent;
+        right: 4px;
+        border-bottom: none;
+      }
+
       &__wrap {
         display: flex;
         align-items: center;
@@ -118,6 +217,15 @@
         background: #f7f7f7;
         padding: 2px;
         padding-right: 7px;
+
+        @media screen and (max-width:650px) {
+          padding-right: 2px;
+          padding-left: 2px;
+          background: transparent;
+          max-width: 100%;
+
+
+        }
       }
 
       &__plus {
@@ -178,11 +286,15 @@
       margin-top: 77px;
       color: #484038;
       text-align: center;
-      font-family: "SF Pro Display";
-      font-size: 28px;
+      font-family: SF Pro Display;
+      font-size: 20px;
       font-style: normal;
       font-weight: 600;
-      line-height: 32px;
+      line-height: 24px;
+
+      @media screen and (max-width:650px) {
+        margin-top: 34px;
+      }
     }
 
 
@@ -209,6 +321,31 @@
     margin-bottom: 20px;
     width: 100%;
     max-width: 244px;
+
+    @media screen and (max-width:650px) {
+      margin: 45px auto;
+      margin-bottom: 15px;
+    }
+
+  }
+
+  &__textArea {
+    display: flex;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #D9D8D6;
+    background: #F7F7F7;
+    width: 100%;
+    max-width: 321px;
+    margin: 0 auto;
+    padding: 10px 14px;
+    color: #6D6660;
+    font-family: SF Pro Display;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    /* 166.667% */
   }
 
   &__dics {
@@ -252,6 +389,25 @@
 
   &__sizeInputImg {
     background-image: url('/arrows-v1.svg');
+  }
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 321px;
+    margin: 0 auto;
+    padding: 18px 0;
+    text-align: center;
+    color: #FFF;
+    border-radius: 5px;
+    background: #0047FF;
+    text-align: center;
+    font-family: SF Pro Display;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
   }
 }
 
