--- a/src/components/form/input-calt/inputCalt.module.scss
+++ b/src/components/form/input-calt/inputCalt.module.scss
@@ -23,6 +23,7 @@
         background: #FFF;
 
         p {
+
             color: #484038;
             text-align: center;
             font-family: SF Pro Display;
@@ -37,11 +38,12 @@
         }
 
         div {
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
             margin: 2px;
-            padding: 15px 20px;
+            padding: 15px 18px;
             border-radius: 0px 10px 10px 0px;
             cursor: pointer;
             transition: all .3s ease;
@@ -52,7 +54,6 @@
             }
 
             &:hover {
-
                 background: #EFEFEF;
             }
 
@@ -64,6 +65,7 @@
 
         &__desible {
             opacity: .2;
+
 
             &:hover {
                 background: #FFF !important;
