--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -58,33 +58,69 @@
 
   &__bottom {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     border-top: 1px solid #F1ECE9;
     padding: 15px 29px;
     padding-left: 32px;
     gap: 10px;
 
+    &__flex {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+    }
+
     @media screen and (max-width:780px) {
       padding: 15px 5px;
     }
 
+    &__open {
+      display: none;
+    }
+
     @media screen and (max-width:650px) {
+
       position: absolute;
       bottom: 0;
       left: 0;
       background-color: #FFF;
       z-index: 100;
       border-radius: 14px 14px 0px 0px;
+
+      &__open {
+        margin: 0 auto;
+        background-color: #fff;
+        margin-top: -36px;
+        width: 122px;
+        height: 21px;
+        border-radius: 14px 14px 0px 0px;
+        border: 1px solid #F1ECE9;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        div {
+          width: 70px;
+          height: 3px;
+          border-radius: 50px;
+          background-color: #484038;
+        }
+
+        &__active {
+          background-color: #c4c0bd !important;
+        }
+      }
     }
 
     &__wrap {
+
       display: flex;
       gap: 22px;
 
       @media screen and (max-width:780px) {
         gap: 14px;
+        width: 100%;
       }
     }
 
@@ -112,6 +148,20 @@
 
     &__content {
       text-align: end;
+
+      @media screen and (max-width:650px) {
+        width: 50%;
+      }
+
+    }
+
+    &__price {
+
+
+      @media screen and (max-width:650px) {
+        width: 50%;
+      }
+
     }
 
     &__title {
@@ -135,6 +185,22 @@
 
       @media screen and (max-width:1050px) {
         font-size: 10px;
+      }
+    }
+  }
+
+  &__bottomTrue {
+    @media screen and (max-width:650px) {
+      height: 0 !important;
+      padding: 0 !important;
+      margin: 0 !important;
+
+      .main__bottom__flex {
+        display: none;
+      }
+
+      .main__bottom__open {
+        margin-top: -21px;
       }
     }
   }
@@ -277,6 +343,7 @@
       flex-shrink: 0;
       z-index: 10;
       transform: rotate(180deg);
+
     }
 
     &__title {
