--- a/src/components/form/input-calt/inputCalt.module.scss
+++ b/src/components/form/input-calt/inputCalt.module.scss
@@ -23,7 +23,8 @@
         background: #FFF;
 
         p {
-
+            width: 100%;
+            display: inline-block;
             color: #484038;
             text-align: center;
             font-family: SF Pro Display;
@@ -32,8 +33,12 @@
             font-weight: 400;
             line-height: 22px;
             padding: 16px 25px;
+            border: none;
             border-left: 1px solid #EFEFEF;
             border-right: 1px solid #EFEFEF;
+
+
+
             margin: 0;
         }
 
