--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -48,6 +48,10 @@
     @media screen and (max-width:650px) {
       margin-top: 0;
       margin-bottom: 8px;
+
+      img {
+        height: 35vh;
+      }
     }
 
     img {
